// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VStepperStep.ts should accept a custom color 1`] = `
<div class="v-stepper__step v-stepper__step--inactive v-stepper__step--complete">
  <span class="v-stepper__step__step pink">
    <i aria-hidden="true"
       class="v-icon notranslate mdi mdi-check theme--light"
    >
    </i>
  </span>
  <div class="v-stepper__label">
  </div>
</div>
`;

exports[`VStepperStep.ts should accept a custom css color 1`] = `
<div class="v-stepper__step v-stepper__step--inactive v-stepper__step--complete">
  <span class="v-stepper__step__step"
        style="background-color: rgb(170, 187, 204); border-color: #aabbcc;"
  >
    <i aria-hidden="true"
       class="v-icon notranslate mdi mdi-check theme--light"
    >
    </i>
  </span>
  <div class="v-stepper__label">
  </div>
</div>
`;
